# MScoreBoard

./: README.md  pyproject.toml
MScoreBoard/: __init__.py
MScoreBoard/data/: scoreboard.db
MScoreBoard/mscoreboard/: config.py  scoreboard.py
mscoreboard/: __init__.py  sql.py
